--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.2.1"
   },
   "keywords": [
