--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.2.0",
