--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-styled-components": "^3.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "material-ui": "^0.20.2",
@@ -24,9 +25,12 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.2.1"
   },
